# mermaid-cli

./: .editorconfig  BINDINGS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  UNIFFI_BINDINGS.md  build.rs  generate_bindings.sh  test.mmd
.github/workflows/: ci.yml  uniffi-bindings.yml
bindings/go/: go.mod  mermaid.go
bindings/nodejs/: Cargo.toml  README.md  index.d.ts  index.js  package.json
bindings/nodejs/examples/: example.js
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: example.py
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md  package.json
bindings/wasm/examples/: browser.html
bindings/wasm/src/: lib.rs
examples/go/: example.go
examples/kotlin/: Example.kt
examples/python/: example.py
examples/ruby/: example.rb
examples/swift/: Example.swift
mermaid-it/: .gitignore  Cargo.toml  README.md
mermaid-it/src/: cli.rs  main.rs
packaging/python/: setup.py
packaging/ruby/: mermaid_it.gemspec
src/: c_bindings.rs  cli.rs  lib.rs  main.rs  mermaid_it.udl  nodejs_bindings.rs  python_bindings.rs  renderer.rs  uniffi_bindings.rs  wasm_bindings.rs
src/js/: init.js
