[package]
name = "mermaid-it"
version = "0.1.0"
edition = "2021"
authors = ["drempuf <soddyque@gmail.com>"]
description = "A CLI tool to render Mermaid diagrams using deno_core"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
deno_core = "0.283"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
webp = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
include_dir = "0.7"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1.0"

[[bin]]
name = "mermaid-it"
path = "src/main.rs"