[package]
name = "mermaid-it"
version = "0.1.0"
edition = "2021"
authors = ["drempuf <soddyque@gmail.com>"]
description = "A CLI tool to render Mermaid diagrams using deno_core"
license = "MIT"

[lib]
name = "mermaid_it"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
deno_core = "0.283"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
webp = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
include_dir = "0.7"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"], optional = true }

# WASM bindings
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1.0"
pyo3-build-config = { version = "0.22", optional = true }

[features]
default = ["cli"]
cli = ["clap"]
python = ["pyo3", "pyo3-build-config"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "serde-wasm-bindgen"]

[[bin]]
name = "mermaid-it"
path = "src/main.rs"
required-features = ["cli"]

[workspace]
members = [
    ".",
    "bindings/python",
    "bindings/wasm"
]

[profile.release]
lto = true
opt-level = 3

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = "fat"

[package.metadata.maturin]
name = "mermaid_it"
module-name = "mermaid_it"