[package]
name = "mermaid-it"
version = "0.1.0"
edition = "2021"
authors = ["drempuf <soddyque@gmail.com>"]
description = "A CLI tool to render Mermaid diagrams using deno_core"
license = "MIT"

[lib]
name = "mermaid_it"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
deno_core = "0.283"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
resvg = "0.42"
usvg = "0.42"
tiny-skia = "0.11"
webp = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
include_dir = "0.7"
thiserror = "1.0"

# UniFFI for multi-language bindings
uniffi = { version = "0.28", optional = true }

# WASM bindings (kept for web compatibility)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1.0"
uniffi = { version = "0.28", features = ["build"] }

[features]
default = ["cli"]
cli = ["clap"]
uniffi-bindings = ["uniffi"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "serde-wasm-bindgen"]

[[bin]]
name = "mermaid-it"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["uniffi-bindings"]

[workspace]
members = [
    ".",
    "bindings/wasm"
]

[profile.release]
lto = true
opt-level = 3

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = "fat"

[package.metadata.maturin]
name = "mermaid_it"
module-name = "mermaid_it"