[package]
name = "mermaid-it-python"
version = "0.1.0"
edition = "2021"
authors = ["drempuf <soddyque@gmail.com>"]
description = "Python bindings for mermaid-it"
license = "MIT"

[lib]
name = "mermaid_it"
crate-type = ["cdylib"]

[dependencies]
mermaid-it = { path = "../..", features = ["python"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }

[build-dependencies]
pyo3-build-config = "0.22"