[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mermaid-it"
version = "0.1.0"
description = "Python bindings for rendering Mermaid diagrams"
authors = [
    { name = "drempuf", email = "soddyque@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
keywords = ["mermaid", "diagram", "visualization", "svg", "png"]

[project.urls]
Homepage = "https://github.com/yourusername/mermaid-it"
Repository = "https://github.com/yourusername/mermaid-it"
Issues = "https://github.com/yourusername/mermaid-it/issues"

[tool.maturin]
python-source = "python"
module-name = "mermaid_it"
features = ["pyo3/extension-module"]