[package]
name = "mermaid-it-wasm"
version = "0.1.0"
edition = "2021"
authors = ["drempuf <soddyque@gmail.com>"]
description = "WASM bindings for mermaid-it"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
mermaid-it = { path = "../..", features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
base64 = "0.22"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]